--- a/src/components/PageHeader/styles.css
+++ b/src/components/PageHeader/styles.css
@@ -36,6 +36,15 @@
   color: var(--color-title-in-primary)
 }
 
+
+.page-header .header-content p {
+  max-width: 30rem;
+  font:700 1.6rem ;
+  line-height: 2.6em;
+  color: var(--color-text-in-primary);
+  margin-top: 2.4rem;
+}
+
 @media(min-width:700px){
   #page-header{
     height: 340px;
